去掉 include profile, 英文日志